[package]
name = "lfuzz"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
nix = "0.26.2"
libc = "0.2.143"
rand = "0.8.5"
x11 = "2.21.0"
clap = { version = "4.2.7", features = ["derive"] }